--- a/gui/Cyotek.DownDetector.Client.csproj
+++ b/gui/Cyotek.DownDetector.Client.csproj
@@ -59,10 +59,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddAddressesDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddAddressesDialog.Designer.cs">
+      <DependentUpon>AddAddressesDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DownDetectorApplicationContext.cs" />
+    <Compile Include="ErrorProvider.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ErrorProvider.designer.cs">
+      <DependentUpon>ErrorProvider.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ListView.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="NativeMethods.cs" />
     <Compile Include="SettingsDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,6 +89,16 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrayIconApplicationContext.cs" />
+    <Compile Include="UiHelpers.cs" />
+    <Compile Include="UriInfoCollectionEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UriInfoCollectionEditor.Designer.cs">
+      <DependentUpon>UriInfoCollectionEditor.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="AddAddressesDialog.resx">
+      <DependentUpon>AddAddressesDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BaseForm.resx">
       <DependentUpon>BaseForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -89,6 +115,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UriInfoCollectionEditor.resx">
+      <DependentUpon>UriInfoCollectionEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.manifest" />
     <None Include="packages.config" />
   </ItemGroup>
