--- a/gui/Cyotek.DownDetector.Client.csproj
+++ b/gui/Cyotek.DownDetector.Client.csproj
@@ -43,22 +43,21 @@
       <HintPath>T:\packages\CyotekTabList.2.2.0\lib\net35\Cyotek.Windows.Forms.TabList.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Design" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
     <Reference Include="TimeSpan2, Version=2.3.0.0, Culture=neutral, PublicKeyToken=0f30172e1249faac, processorArchitecture=MSIL">
       <HintPath>T:\packages\TimeSpan2.2.3.0\lib\net45\TimeSpan2.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AboutPanel.Designer.cs">
+      <DependentUpon>AboutPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddAddressesDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,6 +95,9 @@
     <Compile Include="UriInfoCollectionEditor.Designer.cs">
       <DependentUpon>UriInfoCollectionEditor.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AboutPanel.resx">
+      <DependentUpon>AboutPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddAddressesDialog.resx">
       <DependentUpon>AddAddressesDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -152,6 +154,9 @@
     <Content Include="..\res\status-unstable.png">
       <Link>Resources\status-unstable.png</Link>
     </Content>
+    <None Include="about.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\Cyotek.DownDetector.csproj">
